Cmdline parsing and matching integrated
Now we just need to build in the actual functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 
-name = "metadata_organization_program"
+name = "mop"
 version = "0.0.1"
 authors = [ "Javier Fajardo <javier@fajardo.io>" ]
 
